# Thy-RayTracer

./: CMakeLists.txt  README.md  aabb.cpp  aabb.h  bvh_tree.cpp  bvh_tree.h  camera.cpp  camera.h  hit_rec.h  hittable.cpp  hittable.h  hittable_attribute.h  light.cpp  light.h  main.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  tri_mesh.cpp  tri_mesh.h  triangle_light.cpp  triangle_light.h  world.cpp  world.h
Actor/: area_light.cpp  area_light.h  camera.h  light.cpp  light.h  tri_mesh.cpp  tri_mesh.h
Geometry/: box.cpp  box.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
Material/: dielectrics.cpp  dielectrics.h  emissive.cpp  emissive.h  lambert.cpp  lambert.h  material.cpp  material.h  material_type.h  metal.cpp  metal.h
Texture/: constant_texture.cpp  constant_texture.h  texture.cpp  texture.h
Utils/: constant_value.h  numeric.h  pdf.h  random_util.h  tiny_obj_loader.h  vector3.cpp  vector3.h
